<resources>
    <string name="app_name">MonashFriendFinder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_profile_photo">http://baobaoloveyou.com/flowingdrawer_icon.png</string>
    <string name="title_activity_my_friends">MyFriends</string>
    <string name="title_activity_subscription">Subscription</string>
    <string name="title_activity_searching">Searching</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_home">Back to Home</string>
    <string name="username">WildShark!!</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_tab1">gender</string>
    <string name="search_tab2">nation</string>
    <string name="search_tab3">language</string>
    <string name="search_tab4">more</string>
    <string name="title_activity_menu_list_test">MenuListTest</string>
    <string name="subscription_username">User Name</string>

    <!-- ************************* login ******************** -->
    <string name="account">e-mail</string>
    <string name="password">password</string>
    <string name="check_rem">remeber pswd</string>
    <string name="check_skip">skip login</string>
    <string name="sub">sign up</string>
    <string name="login">sign in</string>
    <string name="loading">loading</string>

    <!-- Subscription -->
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="part_time">Part Time</string>
    <string name="full_time">Full Time</string>
    <string name="unit">Select Your Favorite Unit</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="course_select">Select Your Course</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_google_maps">Map</string>
    <string-array name="spingarr">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>ALL</item>
    </string-array>

    <!-- searching -->
    <string name="search_filter_btn">Filter</string>
    <string name="search_result_btn">result</string>
    <string name="service_not_available">service not available</string>
    <string name="no_address_found">no address found</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="address_found">address found</string>


</resources>
